--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 									<a href="https://github.com/JeffreyBzdn/ProfileProjects/blob/main/Movie%20industry%20correlations.ipynb" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>This project look at what variables effect the gross revenue from movies.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/JeffreyBzdn/ProfileProjects/blob/main/Movie%20industry%20correlations.ipynb" class="button">View Story</a></li>
+										<li><a href="https://github.com/JeffreyBzdn/ProfileProjects/blob/main/Movie%20industry%20correlations.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -113,7 +113,7 @@
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -125,7 +125,7 @@
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -139,7 +139,7 @@
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
